Agregando bloque 4 y solucionando errores - Arreglando css - Problema con el reverse() de javascript - corrigiendo bug en la obtencion de los valores set 2 	modificado:   css/core.css 	modificado:   js/exVocacional.js 	modificado:   test.html

--- a/css/core.css
+++ b/css/core.css
@@ -1,7 +1,7 @@
 #wrapper{ position: fixed; width: 100%; height: 100%; }
   #container{ width: 800px; margin: 0 auto; }
   
-  #bloque1, #bloque2, #bloque3{ display:none; }
+  div[id^="bloque"]{ display:none; }
   
   .cajaPregunta{
     position: relative;
