--- a/css/core.css
+++ b/css/core.css
@@ -1,3 +1,4 @@
+html,body{ background: #ECF3F1; }
 #wrapper{ position: fixed; width: 100%; height: 100%; }
   #container{ width: 800px; margin: 0 auto; }
   
