--- a/css/core.css
+++ b/css/core.css
@@ -44,7 +44,7 @@ html,body{ background: #ECF3F1; }
     z-index: 12;
   }
 
-  #objetoDroppable{
+  .objetoDroppable{
     width: 100%;
     height: 200px;
     background: #89FF6B;
