Cambio de Backgraund

--- a/css/core.css
+++ b/css/core.css
@@ -1,4 +1,4 @@
-html,body{ background: #ECF3F1; }
+html,body{ background: #D3DCF2; }
 #wrapper{ position: fixed; width: 100%; height: 100%; }
   #container{ width: 800px; margin: 0 auto; }
   
