Agregando instrucciones, logo, comentarios base

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,7 +1,7 @@
 /* Set everything to take full height */
 html, 
 body,
-.container,
+#container,
 .slideshow,
 .slideshow ul,
 .slideshow ul li,
@@ -56,9 +56,11 @@ body,
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	top: 50%;
+	display: none;
 }
 
-.slideshow > nav span:hover {
+/*.slideshow > nav span:hover {
 	opacity: 1;
 }
 
@@ -78,7 +80,7 @@ body,
 	left: 50%;
 	-webkit-transform: translateX(-120%);
 	transform: translateX(-120%);
-}
+}*/
 
 .slideshow ul li > svg {
 	position: relative;
@@ -113,14 +115,15 @@ body,
 }
 
 .slide h1,
-.slide blockquote {
+.slide .bck {
 	margin: 0;
 	font-weight: 400;
-	font-size: 3em;
-	font-size: 3vw;
+	font-size: 3.5em;
 	padding-top: 3%;
 	text-shadow: 0 1px 1px rgba(0,0,0,0.05);
 	font-family: 'Flamenco', Arial, sans-serif;
+	border: 0;
+	color: #fff;
 }
 
 .slide h1 {
@@ -133,30 +136,30 @@ body,
 	font-weight: bold;
 }
 
-.slide blockquote {
+.slide .bck {
 	position: relative;
 	margin: 0;
-	padding: 1em 10% 0;
+	padding: 2em 10% 0;
 }
 
-.slide blockquote::before{
+.slide .bck::before{
     content: '\201C';
     display: block;
     position: absolute;
-    top: 0;
-	left: 0;
+    top: 0 !important;
+	left: 0 !important;
 	width: 100%;
     font-size: 3em;
     color: rgba(43,65,77,0.1);
     z-index: -1;
 }
 
-.slide blockquote p {
+.slide .bck p {
 	margin: 0;
 	line-height: 1.2;
 }
 
-.slide blockquote + p {
+.slide .bck + p {
 	color: rgba(43,65,77,0.3);
 }
 
@@ -189,7 +192,7 @@ body,
 
 @media screen and (max-width: 32em) {
 	.slide h1,
-	.slide blockquote {
+	.slide .bck {
 		font-size: 2em;
 	}
 }
