--- a/css/core.css
+++ b/css/core.css
@@ -1,9 +1,11 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+
 html, body {
   background: #2b414d !important;
   color: #fffce1;
   font-weight: 400;
   font-size: 1em;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Lato', Calibri, Arial, sans-serif;
 }
 
   div[id^="bloque"]{ display:none; }
@@ -11,19 +13,13 @@ html, body {
   .cajaPregunta{
     position: relative;
     width: 100%;
-    /*font-size: 2em;*/
-    /*color: #fff;*/
-    /*background: #024959;*/
     left: -1500px;
-    /*text-align: center;*/
-    /*padding: 10px 0;*/
-
     margin: 0;
     font-weight: 400;
     font-size: 3.5em;
     padding: 2em 10% 0;
     text-shadow: 0 1px 1px rgba(0,0,0,0.05);
-    font-family: 'Flamenco', Arial, sans-serif;
+    font-family: 'Lato', Calibri, Arial, sans-serif;
     border: 0;
     color: #fff;
   }
@@ -47,7 +43,7 @@ html, body {
   }
   
   /*Cambiar de with de momento*/
-  ul{ position: relative; list-style: none; width: 100%; padding: 0; /*right: -1500px;*/ text-align: center; }
+  ul{ position: relative; list-style: none; width: 100%; padding: 0; text-align: center; }
   .resp{
     position: relative;
     background: #F24C27;
