--- a/css/core.css
+++ b/css/core.css
@@ -25,7 +25,7 @@ html, body {
   }
 
   .cajaPregunta:before{
-    content: '\201C';
+  /*content: '\201C';*/
     display: block;
     position: absolute;
     top: 0;
@@ -52,7 +52,7 @@ html, body {
     font-size: 1em;
     text-align: center;
     color: #fff;
-    height: 100px !important;
+    height: 20px !important;
   }
 
   .dragResp{
