Estilos del Formulario

--- a/css/modal/component.css
+++ b/css/modal/component.css
@@ -122,6 +122,8 @@ perspective effects (not including the modals and the overlay).
 .md-content > div p {
 	margin: 0;
 	padding: 10px 0;
+	font-family: 'Lato', Calibri, Arial, sans-serif;
+	font-size: large;
 }
 
 .md-content > div ul {
