--- a/css/core.css
+++ b/css/core.css
@@ -16,11 +16,10 @@ html, body {
     left: -1500px;
     margin: 0;
     font-weight: 400;
-    font-size: 3.4em;
-    padding: 2em 6% 0;
+    font-size: 3.3em;
+    padding: 2em 10% 0;
     text-shadow: 0 6px 6px rgba(0,0,0,1.05);
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    text-align: justify;
     border: 0;
     color: #fff;
   }
@@ -49,33 +48,31 @@ html, body {
     position: relative;
     margin-left: 1px;
     display: inline-block;
+    font-family: 'Lato', Calibri, Arial, sans-serif;
     font-size: 1em;
     text-align: center;
     color: #fff;
-    width: 161px;
+    width: 165px;
     height: 48px;
-    border: 3px solid #555;
-    background: #428bca;
-    
+    border: 1px solid #fff;
+    background: #E74C3C;
+    padding: 10px; 
   }
 
   .dragResp{
-     width: 161px; 
-     height: 48px;
-     position: relative;
-     margin-left: 1px;
-     display: inline-block;
-     font-size: 1em;
-     text-align: center;
-     color: #fff; 
-     border: 3px solid #555; 
-     background: #428bca;
-     -webkit-transform: skew(20deg);
-     -moz-transform: skew(20deg);
-     -ms-transform: skew(20deg);
-     -o-transform: skew(20deg);
-     transform: skew(20deg);
-     z-index: 12;
+    position: relative;
+    margin-left: 1px;
+    display: inline-block;
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+    font-size: 1em;
+    text-align: center;
+    color: black;
+    width: 165px;
+    height: 48px;
+    border: 1px solid #fff;
+    background: #EEE666;
+    padding: 10px;
+    z-index:  12;
   }
 
   .objetoDroppable{
@@ -87,6 +84,21 @@ html, body {
     border-left: 60px solid transparent;
     border-top: 135px solid #fff;
     z-index: 1;    
+  }
+
+  /*bloque 3 y 6*/
+  td{
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+    font-size: 1.6em;
+    text-align: justify;
+    padding: 4px 5px 0 !important;
+    color: #fff;
+    text-shadow: 0px 6px 6px rgba(0,0,0,1.05);
+  }
+
+  select{
+    color: black !important;
+    font-size: .8em !important;
   }
   
   /*label de formulario*/
@@ -106,7 +118,7 @@ html, body {
     
   input:focus{
     background-color: #DEDEDE;
-    border:4px solid #6FB3E8;
+    border:1px solid #6FB3E8;
   }
   
 
@@ -121,3 +133,4 @@ html, body {
     width: 130px;
     height: 130px;
   }
+
