--- a/css/core.css
+++ b/css/core.css
@@ -18,7 +18,7 @@ html, body {
     font-weight: 400;
     font-size: 3.3em;
     padding: 2em 10% 0;
-    text-shadow: 0 6px 6px rgba(0,0,0,1.05);
+    text-shadow: 0 1px 1px rgba(0,0,0,1);
     font-family: 'Lato', Calibri, Arial, sans-serif;
     border: 0;
     color: #fff;
@@ -45,6 +45,15 @@ html, body {
   /*Cambiar de with de momento*/
   ul{ position: relative; list-style: none; width: 100%; padding: 0; text-align: center; }
   .resp{
+   /*position: relative;
+    background: #F24C27;
+    margin-left: 15px;
+    display: inline-block;
+    font-size: 1em;
+    text-align: center;
+    color: #fff;
+    height: 20px !important;*/
+
     position: relative;
     margin-left: 1px;
     display: inline-block;
@@ -60,6 +69,37 @@ html, body {
   }
 
   .dragResp{
+    /*
+    position: relative;
+    background: #F24C27;
+    margin-left: 15px;
+    display: inline-block;
+    font-size: 1em;
+    text-align: center;
+    color: #fff;
+    z-index: 12;*/
+
+    /*trapezoide*/
+    
+    /*width: 161px; 
+     height: 48px;
+     position: relative;
+     margin-left: 1px;
+     display: inline-block;
+     font-size: 1em;
+     text-align: center;
+     color: #fff; 
+     border: 3px solid #555; 
+     background: #428bca;
+     -webkit-transform: skew(20deg);
+     -moz-transform: skew(20deg);
+     -ms-transform: skew(20deg);
+     -o-transform: skew(20deg);
+     transform: skew(20deg);
+     z-index: 12;*/
+
+    /*Cuadros*/
+
     position: relative;
     margin-left: 1px;
     display: inline-block;
@@ -76,6 +116,13 @@ html, body {
   }
 
   .objetoDroppable{
+    /*width: 100%;
+    height: 200px;
+    background: #89FF6B;
+    position: relative;
+    margin: 80px auto 0;
+    z-index: 1;*/
+
     width: 100%;
     height: 0px;
     position: relative;
@@ -93,7 +140,7 @@ html, body {
     text-align: justify;
     padding: 4px 5px 0 !important;
     color: #fff;
-    text-shadow: 0px 6px 6px rgba(0,0,0,1.05);
+    text-shadow: 0 1px 1px rgba(0,0,0,1);
   }
 
   select{
@@ -107,25 +154,47 @@ html, body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     font-weight: normal;
     color: #fff;
-
+    text-align: center;
+    width: 90%;
   }
 
-  input {
+  #commentForm{
+    width: 45%;
+    margin: 0 auto;
+    text-align: left;
+  }
+
+  #commentForm input {
     height: 40px;
-    width: 40%;
-    background: #fff;
+    width: 90%;
+    background: rgba(43,65,77,.5);
+    border: 1px solid #358ebc;
+    padding: 0 10px;
+    margin-right: 2px;
   }
     
-  input:focus{
-    background-color: #DEDEDE;
-    border:1px solid #6FB3E8;
+   #commentForm input:focus{
+    background:rgba(43,65,77,.5);
+    border:1px solid #fff; 
   }
   
+  button[type="submit"]{
+    width: 90%;
+  }
+
+  #commentForm .inputError{
+    background: rgba(43,65,77,.7);
+    border: 1px solid #ff7070;
+  }
+
+  #commentForm .glyphicon-remove {
+    color: #ff7070;
+  }
 
   #cname, #cemail, #ctel, #cdomicilio, #ctutor{
     font-weight: bold;
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #3874BB;
+    color: #fff;
   }
 
   /* Imagen ? */
@@ -133,4 +202,22 @@ html, body {
     width: 130px;
     height: 130px;
   }
+  
+  /*Color placeholder*/
 
+*::-webkit-input-placeholder {
+    /* Google Chrome y Safari */
+    color: rgba(254,253,253,.5);
+}
+*:-moz-placeholder {
+    /* Firefox anterior a 19 */
+    color: rgba(254,253,253,.5);
+}
+*::-moz-placeholder {
+    /* Firefox 19 y superior */
+    color: rgba(254,253,253,.5);
+}
+*:-ms-input-placeholder {
+    /* Internet Explorer 10 y superior */
+    color: rgba(254,253,253,.5) !important;
+}
