--- a/css/core.css
+++ b/css/core.css
@@ -9,19 +9,25 @@ html, body {
 }
 
   div[id^="bloque"]{ display:none; }
-  
+
+
   .cajaPregunta{
     position: relative;
     width: 100%;
     left: -1500px;
     margin: 0;
     font-weight: 100;
-    font-size: 3.3em;
-    padding: 2em 2% 0;
+    font-size: 3.3vw;
+    padding: 10% 0 0;
     text-shadow: 0 1px 1px rgba(0,0,0,1);
     font-family: 'Lato', Calibri, Arial, sans-serif;
     border: 0;
     color: #fff;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
   }
 
   .cajaPregunta:before{
@@ -45,79 +51,239 @@ html, body {
   /*Cambiar de with de momento*/
   ul{ position: relative; list-style: none; width: 100%; padding: 0; text-align: center; }
   .resp{
-   /*position: relative;
-    background: #F24C27;
-    margin-left: 15px;
-    display: inline-block;
-    font-size: 1em;
-    text-align: center;
-    color: #fff;
-    height: 20px !important;*/
-
     position: relative;
     margin-left: 1px;
     display: inline-block;
     font-family: 'Lato', Calibri, Arial, sans-serif;
     font-size: 1.1em;
-    font-weight: 100;
+    font-weight: 150;
     text-align: center;
     color: #fff;
     width: 165px;
     height: 48px;
     border: 1px solid #fff;
     background: #E74C3C;
-    padding: 10px; 
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: -1px 5px #999;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;     
   }
+/*.resp img{
+
+}*/
+
+/*ins.noborder
+{
+    display:block;
+    width: 168px;
+    height: 112px;
+    background: url(../img/Emoticons/MGM.png);
+    background-repeat:no-repeat;
+}*/
+      .resp:hover {background-color: #b9463a}
+
+      .resp:active {
+        background-color: #b9463a;
+        box-shadow: -1px 5px #666;
+        transform: translateY(4px);
+      }
+
+      /*Imagen Me gusta mucho*/
+      #bloque1  .resp .avatar4,
+      #bloque4  .resp .avatar4,        
+      #bloque7  .resp .avatar4,
+      #bloque10 .resp .avatar4 {
+        
+        background-image: url(../img/Emoticons/MGM.png);
+        background-size: 160px;
+        background-repeat: no-repeat;
+        position: absolute;
+        bottom: -120px;
+        width: 168px;
+        height: 112px;
+        left: -3px;
+      }
+
+      /*Imagen Me gusta algo*/
+      #bloque1  .resp .avatar3,
+      #bloque4  .resp .avatar3,        
+      #bloque7  .resp .avatar3,
+      #bloque10 .resp .avatar3 {
+        background: url(../img/Emoticons/MGA.png) center no-repeat;
+        background-size: 140px;
+        position: absolute;
+        bottom: -120px;
+        width: 168px;
+        height: 112px;
+        left: -3px;
+      }
+
+      /*Imagen Me es indiferente*/
+      #bloque1  .resp .avatar2,
+      #bloque4  .resp .avatar2,        
+      #bloque7  .resp .avatar2,
+      #bloque10 .resp .avatar2 {
+        background: url(../img/Emoticons/MED.png) center no-repeat;
+        background-size: 167px;
+        position: absolute;
+        bottom: -120px;
+        width: 168px;
+        height: 112px;
+        left: -3px;
+      }
+
+      /*Imagen Me desagrada poco*/
+      #bloque1  .resp .avatar1,
+      #bloque4  .resp .avatar1,        
+      #bloque7  .resp .avatar1,
+      #bloque10 .resp .avatar1 {
+        background: url(../img/Emoticons/MDP.png) center no-repeat;
+        background-size: 155px;
+        position: absolute;
+        bottom: -120px;
+        width: 168px;
+        height: 112px;
+        left: -3px;
+      }
+
+      /*Imagen Me gusta mucho*/
+      #bloque1  .resp .avatar0,
+      #bloque4  .resp .avatar0,        
+      #bloque7  .resp .avatar0,
+      #bloque10 .resp .avatar0 {
+        background: url(../img/Emoticons/MDM.png) center no-repeat;
+        background-size: 125px;
+        position: absolute;
+        bottom: -120px;
+        width: 168px;
+        height: 112px;
+        left: -3px;
+      }
 
   .dragResp{
-    /*
-    position: relative;
-    background: #F24C27;
-    margin-left: 15px;
-    display: inline-block;
-    font-size: 1em;
-    text-align: center;
-    color: #fff;
-    z-index: 12;*/
+ 
 
-    /*trapezoide*/
-    
-    /*width: 161px; 
-     height: 48px;
-     position: relative;
-     margin-left: 1px;
-     display: inline-block;
-     font-size: 1em;
-     text-align: center;
-     color: #fff; 
-     border: 3px solid #555; 
-     background: #428bca;
-     -webkit-transform: skew(20deg);
-     -moz-transform: skew(20deg);
-     -ms-transform: skew(20deg);
-     -o-transform: skew(20deg);
-     transform: skew(20deg);
-     z-index: 12;*/
-
-    /*Cuadros*/
+    /*boton*/
 
     position: relative;
     margin-left: 1px;
     display: inline-block;
     font-family: 'Lato', Calibri, Arial, sans-serif;
     font-size: 1.1em;
-    font-weight: 100;
+    font-weight: 150;
     text-align: center;
     color: black;
     width: 165px;
     height: 48px;
     border: 1px solid #fff;
-    background: #EEE666;
+    /*background: #EEE666;*/
     padding: 10px;
     z-index:  12;
+    border-radius: 4px;
+    cursor: move; /* fallback: no `url()` support or images disabled */
+    cursor: url(images/grab.cur); /* fallback: Internet Explorer */
+    cursor: -webkit-grab; /* Chrome 1-21, Safari 4+ */
+    cursor:    -moz-grab; /* Firefox 1.5-26 */
+    cursor:         grab; /* W3C standards syntax, should come least */
+    box-shadow: -1px 5px #999;
+    background: #EEE666 url(../img/Emoticons/Ball.png) -58px no-repeat;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
   }
 
-  .objetoDroppable{
+      .dragResp:hover {background-color: #d2cb63}
+
+      .dragResp:active {
+        background-color: #d2cb63;
+        box-shadow: -1px 5px #666;
+        transform: translateY(4px);
+        cursor: -webkit-grabbing; 
+        cursor: -moz-grabbing;
+        cursor: url(images/grabbing.cur);
+        cursor:         grabbing;
+      }
+
+      #posDrag{
+        padding: 0%;
+      }
+
+     /*Imagen balon de basquet / Me gusta mucho*/
+/*      #bloque2  .dragResp .avatar4,
+      #bloque5  .dragResp .avatar4,
+      #bloque8  .dragResp .avatar4,
+      #bloque11 .dragResp .avatar4{
+        background: url(../img/Emoticons/Ball.png) center no-repeat;
+        background-size: 95px;
+        position: absolute;
+        bottom: -105px;
+        width: 105px;
+        height: 100px;
+        left: 30px;
+      }*/
+
+       /*Imagen balon de basquet / Me gusta algo*/
+ /*     #bloque2  .dragResp .avatar3,
+      #bloque5  .dragResp .avatar3,
+      #bloque8  .dragResp .avatar3,
+      #bloque11 .dragResp .avatar3{
+        background: url(../img/Emoticons/Ball.png) center no-repeat;
+        background-size: 95px;
+        position: absolute;
+        bottom: -105px;
+        width: 105px;
+        height: 100px;
+        left: 30px;
+      }*/
+
+       /*Imagen balon de basquet / Me es indiferente*/
+/*      #bloque2  .dragResp .avatar2,
+      #bloque5  .dragResp .avatar2,
+      #bloque8  .dragResp .avatar2,
+      #bloque11 .dragResp .avatar2{
+        background: url(../img/Emoticons/Ball.png) center no-repeat;
+        background-size: 95px;
+        position: absolute;
+        bottom: -105px;
+        width: 105px;
+        height: 100px;
+        left: 30px;
+      }*/
+
+      /*Imagen balon de basquet / Me desagrada poco*/
+ /*     #bloque2  .dragResp .avatar1,
+      #bloque5  .dragResp .avatar1,
+      #bloque8  .dragResp .avatar1,
+      #bloque11 .dragResp .avatar1{
+        background: url(../img/Emoticons/Ball.png) center no-repeat;
+        background-size: 95px;
+        position: absolute;
+        bottom: -105px;
+        width: 105px;
+        height: 100px;
+        left: 30px;
+      }*/
+
+      /*Imagen balon de basquet / Me desagrada mucho*/
+/*      #bloque2  .dragResp .avatar0,
+      #bloque5  .dragResp .avatar0,
+      #bloque8  .dragResp .avatar0,
+      #bloque11 .dragResp .avatar0{
+        background: url(../img/Emoticons/Ball.png) center no-repeat;
+        background-size: 95px;
+        position: absolute;
+        bottom: -105px;
+        width: 105px;
+        height: 100px;
+        left: 30px;
+      }*/
+
+  .objetoDroppable {
     /*width: 100%;
     height: 200px;
     background: #89FF6B;
@@ -125,25 +291,40 @@ html, body {
     margin: 80px auto 0;
     z-index: 1;*/
 
-    width: 100%;
+    width: 40%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    left: 30%;
+    
+      
+   
+   /*background-size: 300px;*/
+   /* width: 100%;
     height: 0px;
     position: relative;
-    margin: 80px auto 0;
+    margin: 120px auto 0;
     border-right: 60px solid transparent;
     border-left: 60px solid transparent;
     border-top: 135px solid #fff;
-    z-index: 1;    
+    z-index: 1;    */
   }
 
   /*bloque 3 y 6*/
   td{
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    font-size: 1.6em;
+    font-size: 1.6vw;
     font-weight: 100;
     text-align: justify;
     padding: 4px 5px 0 !important;
     color: #fff;
     text-shadow: 0 1px 1px rgba(0,0,0,1);
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
   }
 
   select{
@@ -153,30 +334,99 @@ html, body {
   }
 
   .posBloq3{
-    position: absolute;
-    top: -50px;
+    position: relative;
+    top: -10%;
+    /*top: -50px; */
     text-align: -webkit-center;
   }
 
+  .posBloq6{
+    position: relative;
+    top:-20%;
+    /*position: absolute;
+    top:-7%;*/
+    /*top: -50px; */
+    text-align: -webkit-center;
+  }
+  .position{
+    text-align: -moz-center;
+  }
+
+.posBloq12{
+    position: relative;
+    top: 9%;
+    /*position: absolute;
+    top: 25%;*/
+    text-align: -webkit-center;
+  }
   /*Posición Bloque 1 y 4*/
 
-  .posBloq1{
-    padding: 150px 0px;
+  /*.posBloq1{
+    padding: 0% 0%;
+  }*/
+
+  /*Slide Portada*/
+  #Titulo {
+    margin: 0;
+    font-weight: 100;
+    font-size: 3vw;
+    padding: 3% 0;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+    border: 0;
+    color: #fff;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
   }
+
+  #Subtitulo {
+    margin: 0;
+    font-weight: 100;
+    font-size: 2.5vw;
+    padding: 3% 0;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+    border: 0;
+    color: #fff;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
+  }
+
+  /*Slide Concepto Test Vocacional */
+  #tituloConcepto{
+    margin: 45px;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
+  }
+
   
   /*label de formulario*/
   .formLabel{
-    font-size: 1.4em;
+    font-size: 1.4vw;
     font-family: 'Lato', Calibri, Arial, sans-serif;
     font-weight: 100;
     color: #fff;
     text-align: center;
     width: 90%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
+    padding: 1%;
   }
 
   #commentForm{
     width: 45%;
-    margin: 0 auto;
+    margin: 0 32% 0 59%;
     text-align: left;
   }
 
@@ -184,7 +434,7 @@ html, body {
     height: 40px;
     width: 90%;
     font-weight: 100;
-    font-size: 1.3em;
+    font-size: 1.3vw;
     background: rgba(43,65,77,.5);
     border: 1px solid #358ebc;
     padding: 0 10px;
@@ -194,6 +444,13 @@ html, body {
    #commentForm input:focus{
     background:rgba(43,65,77,.5);
     border:1px solid #fff; 
+  }
+
+  #imageForm{
+    background: url(../img/ImageFormulario.png) 12% 81% no-repeat;
+    background-size: 45% auto;
+    left: 10%;
+    top: 0%;
   }
   
   button[type="submit"]{
@@ -209,18 +466,12 @@ html, body {
     color: #ff7070;
   }
 
-  #cname, #cemail, #ctel, #cdomicilio, #ctutor{
+  #cname, #cemail, #ctel, #cdomicilio, #cescuela{
     font-weight: bold;
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #fff;
   }
 
-  /* Imagen ? */
-  #Signo{
-    width: 130px;
-    height: 130px;
-  }
-  
   /*Color placeholder*/
   *::-webkit-input-placeholder {
       /* Google Chrome y Safari */
@@ -243,7 +494,7 @@ html, body {
   .Instrucciones{
     position: relative;
     font-weight: 100 !important;
-    font-size: 2em;
+    font-size: 2vw;
     padding: 0em 5% 1em;
     text-shadow: 0 1px 1px rgba(0,0,0,0.05);
     font-family: 'Lato', Calibri, Arial, sans-serif;
@@ -251,32 +502,209 @@ html, body {
     color: #fff;
     margin: 0;
     line-height: 1.2 !important;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
+  }
+
+
+  
+  #background {
+    background: url(../img/UniBanner.png) 0 bottom no-repeat;
+    background-size: 100% auto;
+  }
+
+  .unam {
+    width: 15%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    left: 42%;
+  }
+
+  .fondoImage{
+    background: url(../img/h1.png) 0 0;
+    padding: 10px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border: 0px solid #000000;
+    font-size: 1.6vw;
+  }
+
+  #LogoSlide{
+    margin: 0;
+    font-weight: 100;
+    font-size: 1.5vw;
+    padding-top: 3%;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+    border: 0;
+    color: #fff;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
+  }
+  
+  #LogoSlideDown{
+    padding-top: 25%;
   }
 
   .containerGrafica{
     position: relative;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
+
   }
 
     .grid12{
+      font-family: 'Lato', Calibri, Arial, sans-serif;
       width: 100%;
-      font-size: 2em;
-      font-weight: 100 !important;
-      margin: 0 auto;
+      font-size: 2.2vw;
+      font-weight: 500 !important;
+      margin: 0 -4%;
       color: white;
     }
 
     .grid4{
       width: 32%;
+     color: #fff;
+
+    }
+
+    .grid5{
+      /*width: 32%;*/
+     font-family: 'Lato', Calibri, Arial, sans-serif;
+     font-size: 1.2em;
+     color: #fff;
+     text-align: left;
+
     }
 
     .ladoIzq, .ladoDer, .grid4{
       float: left;
+      font-family: 'Lato', Calibri, Arial, sans-serif;
+      
     }
     .ladoIzq, .ladoDer{
       width: 48%;
       min-height: 300px;
-      border: 1px black solid;
+      /*border: 1px #fff solid;*/
+      
+    }
+
+    .tituloGrafica{
+      font-size: 1.6vw;
+
+    }
+    
+    #carrerasIntereses, #carrerasAptitudes{
+    font-size: 1.2vw;  
+  
     }
     .clearfix{
       clear: both;
     }
+
+    /*Scroll conceptos*/
+    ::-webkit-scrollbar {
+        width: 1em;
+    }
+     
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    }
+     
+    ::-webkit-scrollbar-thumb {
+      background-color: darkgrey;
+      outline: 1px solid slategrey;
+    }
+
+    ::-webkit-scrollbar-button{
+      width: 1em;
+      background-color: darkgrey;
+      outline: 1px solid slategrey;
+    }
+
+    .scrollModal{
+      max-height: 80%; 
+      height: 80%; 
+      overflow: scroll;
+      overflow-x: hidden;
+    }
+    /*Boton Conceptos/Cerrar */
+    .md-content .btnFlotante{
+      position: fixed;
+      top: 17px;
+      right: 5px;
+
+    }
+    
+    /* Efecto vibrante Titulo - btnOrange/*/
+/*    @-webkit-keyframes spaceboots {
+    0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+    10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+    30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+    40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+    50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+    70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+    80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+    90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+    100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+    }
+
+    #Titulo:hover,
+    #Titulo:focus,
+    #tituloConcepto:hover,
+    #tituloConcepto:focus,
+    .btnOrange:hover,
+    .btnOrange:focus {
+      -webkit-animation-name: spaceboots;
+      -webkit-animation-duration: 0.8s;
+      -webkit-transform-origin:50% 50%;
+      -webkit-animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+    }
+*/
+
+
+/*     #aviso-movil-horizontal { display: none; }
+    @media only screen and (orientation:portrait) {
+        #wrapper { display:none; }
+        #aviso-movil-horizontal { display:block; }
+    }
+    @media only screen and (orientation:landscape) {
+        #aviso-movil-horizontal { display:none; }
+    }*/
+
+/*    .C2 { display:block; }
+         @media only screen and (orientation:portrait){
+            .C2 {  
+                  -webkit-transform: rotate(90deg);
+                  -moz-transform: rotate(90deg);
+                  -o-transform: rotate(90deg);
+                  -ms-transform: rotate(90deg);
+                  transform: rotate(90deg);
+                 }
+ 
+         }
+         @media only screen and (orientation:landscape){
+            .C2 {  
+                  -webkit-transform: rotate(0deg);
+                  -moz-transform: rotate(0deg);
+                  -o-transform: rotate(0deg);
+                  -ms-transform: rotate(0deg);
+                  transform: rotate(0deg);
+                 }
+         }*/
