--- a/css/modal/component.css
+++ b/css/modal/component.css
@@ -1,7 +1,7 @@
 /* General styles for the modal */
 button {
 	border: none;
-	padding: 0.6em 1.2em;
+	padding: 0.6vw 1.2vw;
 	color: #fff;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	font-size: 1em;
@@ -138,26 +138,36 @@ perspective effects (not including the modals and the overlay).
 	margin: 0;
 	padding: 0.4em;
 	text-align: center;
-	font-size: 2.4em;
+	font-size: 2.4vw;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	font-weight: 400;
 	opacity: 0.8;
 	background: rgba(0,0,0,0.1);
 	border-radius: 3px 3px 0 0;
+	cursor: default;
+	-webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
 }
 
 .md-content > div {
-	padding: 15px 40px 30px;
+	padding: 15px 30px 30px;
 	margin: 0;
 	font-weight: 300;
-	font-size: 1.15em;
+	font-size: 1.15vw;
 }
 
 .md-content > div p {
 	margin: 0;
 	padding: 10px 0;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
-	font-size: large;
+	font-size: 1.7vw;
+	cursor: default;
+	-webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select:none;
 }
 
 .md-content > div ul {
@@ -172,7 +182,7 @@ perspective effects (not including the modals and the overlay).
 .md-content button {
 	display: block;
 	margin: 0 auto;
-	font-size: 0.8em;
+	font-size: 1em;
 }
 
 /* Individual modal styles with animations/transitions */
